spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ a:visited {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, .5);
-  justify-content: flex-end;
+  justify-content: center;
   color: white;
   align-items: center;
   font-size: 5rem;
@@ -156,7 +156,7 @@ button {
   cursor: pointer;
   border: 2px solid black;
   padding: .25em .5em;
-  margin: 1.3em;
+  /* margin: 1.3em; */
   background-color: white;
   font-family: 'Montserrat', sans-serif;
 }
